@@ -1,5 +1,13 @@
 2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* gmm-utils.el (gmm-called-interactively-p): Revert.
+	This seems to causes Emacs to get stuck!
+	* gnus-art.el (article-unsplit-urls)
+	* gnus-bookmark.el (gnus-bookmark-bmenu-list)
+	* gnus-registry.el (gnus-registry-get-article-marks)
+	* message.el (message-goto-body)
+	(message-called-interactively-p): Revert.
+
 	* gmm-utils.el (gmm-called-interactively-p): New function.
 	* gnus-art.el (article-unsplit-urls)
 	* gnus-bookmark.el (gnus-bookmark-bmenu-list)
